--- a/src/app/menu/topbar/topbar.component.html
+++ b/src/app/menu/topbar/topbar.component.html
@@ -3,6 +3,7 @@
     <a href="#" class="dropbtn"><i class="fa fa-user"></i> {{display_name}}</a>
     <div class="dropdown-content">
       <a routerLink="/setting"><i class="fa fa-fw fa-gear"></i> Settings</a>
+      <a routerLink="/staffcreate"><i class="fa fa-fw fa-power-off"></i> Create staff</a>
       <a routerLink="/login"><i class="fa fa-fw fa-power-off"></i> Logout</a>
       <!--<button class="btNoneLogout" (click)="logOut()"><i class="fa fa-fw fa-power-off"></i> Log Out</button>-->
     </div>
