--- a/src/app/components/product/product-pic/product-pic.component.html
+++ b/src/app/components/product/product-pic/product-pic.component.html
@@ -1,5 +1,4 @@
 <p>
   product-pic works!
 </p>
-<img src="http://wm.thaibuffer.com/o/u/2016/pichaya/2016_12_december/women/rita/rt1/rita1.jpg">
-<img src="http://localhost/project_shop_api/product-img/rita2.jpg">
+<p-galleria [images]="images" panelWidth="500" panelHeight="313" showCaption="true"></p-galleria>
