--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="ui-g-12 ui-g-nopad" [hidden]="hiddenLogin" style="background-color: #20272A; color:#889597;">
         <app-topbar></app-topbar>
     </div>
-    <div class="ui-g-12 ui-g-nopad ui-md-2" [hidden]="hiddenLogin" style="background-color: #20272A; color:#889597;">
+    <div class="ui-g-12 ui-g-nopad ui-md-2" [hidden]="hiddenLogin" style="background-color: #20272A;">
         <app-sidemenu style="padding:0px;margin-top: 0px;"></app-sidemenu>
     </div>
     <div class="ui-g-12 ui-g-nopad" [class.ui-md-10]="myClass10">
